# ExpectRust

./: .gitignore  Cargo.toml  README.md  cliff.toml  deny.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  security.yml
docs/: SCRIPT_IMPLEMENTATION.md  TRANSLATOR_README.md
examples/: SSH_EXAMPLES.md  basic_command.rs  control_characters.rs  interactive_shell.rs  pattern_matching.rs  script_example.rs  script_patterns.rs  script_python.rs  script_variables.rs  ssh_automation.exp  ssh_automation.rs  ssh_automation_script.rs  ssh_simple.rs  timeout_handling.rs  translator_example.rs  translator_multi_pattern.rs
src/: lib.rs  main.rs
src/buffer/: ansi.rs  mod.rs
src/pattern/: matcher.rs  mod.rs  search.rs
src/result/: error.rs  mod.rs
src/script/: ast.rs  context.rs  error.rs  grammar.pest  interpreter.rs  mod.rs  parser.rs  runtime.rs  translator.rs  value.rs
src/script/codegen/: expression.rs  mod.rs  pattern.rs  statement.rs  warnings.rs
src/session/: builder.rs  mod.rs  spawn.rs
tests/: integration_tests.rs  script_tests.rs
tests/fixtures/: basic.exp  eof.exp  expect_block.exp  expect_oneline.exp  multi.exp  simple.exp
